# poker-geeks-lab

./: .gitignore  CLAUDE.md
backend/: .env.example  main.py  poker_geeks_lab.db  pyproject.toml  pytest.ini
backend/api/: deps.py
backend/api/routes/: import_route.py  player_route.py
backend/app/: compute_stats.py  import_hands.py  stats_cache.py
backend/db/: repository.py  schema.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 8f91aeb0c603_initial_schema.py
backend/domain/: action.py  equity.py  hand.py  player.py  stats.py  street.py
backend/parsers/: __init__.py  base.py  ggpoker.py  pokerstars.py
backend/scripts/: diagnose_allin.py  diagnose_allin2.py  diagnose_cashout.py  diagnose_exact.py  diagnose_folds.py  diagnose_uncalled_verify.py
backend/tests/: conftest.py  test_api.py  test_db.py  test_e2e_sanity.py  test_parser_ggpoker.py  test_parser_pokerstars.py  test_stats.py
backend/tests/fixtures/hand_histories/: allin_preflop.txt  basic_raise_and_win.txt  gg_allin_preflop.txt  gg_allin_turn.txt  limp_bb_checks.txt  walk_bb_wins.txt
backend/tests/fixtures/hand_histories/real_hands/: GG20231204-0516 - RushAndCash19511667 - 0.05 - 0.1 - 6max.txt  GG20231204-0516 - RushAndCash19511721 - 0.05 - 0.1 - 6max.txt  GG20231204-0631 - RushAndCash19557856 - 0.05 - 0.1 - 6max.txt  GG20231204-0717 - RushAndCash14597269 - 0.02 - 0.05 - 6max.txt  GG20231204-0725 - RushAndCash19557854 - 0.05 - 0.1 - 6max.txt  GG20231204-0846 - RushAndCash19586512 - 0.05 - 0.1 - 6max.txt  GG20231204-1008 - RushAndCash19635827 - 0.05 - 0.1 - 6max.txt  (+25 more)
(+50 files in other folders)
